- Renamed project name in package.json - Added billing controller - Refactored mock data to be decimal - Completed initial post billing communications
